Fixed the back to previous link alignment

--- a/assets/scss/_container.scss
+++ b/assets/scss/_container.scss
@@ -1,7 +1,7 @@
 
 @include bp-medium {
 .container {
-    padding: 0px 40px;
+    padding: 0px 50px;
 }
 }@include bp-large {
 .container {
