--- a/assets/scss/_type.scss
+++ b/assets/scss/_type.scss
@@ -251,17 +251,21 @@ a {
 
 .returnLink {
     @extend .m2;
-    padding: 25px 0 8px 0;
+    font-size: 16px;
+    padding: 25px 0 20px 0;
 }
 
 @include bp-medium {
     .returnLink {
-        padding: 25px 0 12px 0;
+        margin-left: -15px;
+        font-size: 16px;
+        padding: 25px 0 18px 0;
     }
 }
 
 @include bp-large {
     .returnLink {
-        padding: 32px 0 12px 0;
+        font-size: 16px;
+        padding: 32px 0 20px 0;
     }
 }
